Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       <header>
         <h1>Codejudge</h1>
         <p>host coding competitions anywhere, anytime</p>
+
         <p class="view"><a href="https://github.com/sankha93/codejudge">View the Project on GitHub <small>sankha93/codejudge</small></a></p>
+
+
         <ul>
           <li><a href="https://github.com/sankha93/codejudge/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/sankha93/codejudge/tarball/master">Download <strong>TAR Ball</strong></a></li>
@@ -37,7 +40,7 @@
 
 <h3>In case you are interested</h3>
 
-<p>Codejudge is still in its infant stages of development. If you find any bugs or security loopholes in Codejudge please do report them to me. Or better still, fork Codejudge on <a href="https://github.com/sankha93/codejudge">Github</a> and start hacking on it. I'll be waiting for your pull request.</p>
+<p>Codejudge is still in its infant stages of development. If you find any bugs or security loopholes in Codejudge please do report them <a href="https://github.com/sankha93/codejudge/issues">here</a>. Or better still, fork Codejudge on <a href="https://github.com/sankha93/codejudge">Github</a> and start hacking on it. I'll be waiting for your pull request.</p>
 
 <h3>Author</h3>
 
